[package]
name = "merkle-distributor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.124", optional = true }
hex-literal = {version = "0.3.1", optional = true}
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }

sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true,branch = "release-polkadot-v1.1.0" }

pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "b3694e631df7f1ca16b1973122937753fcdee9d4", default-features = false }

[dev-dependencies]
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "b3694e631df7f1ca16b1973122937753fcdee9d4", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "serde/std",
    "scale-info/std",
    "sp-core/std",
    "frame-system/std",
    "sp-runtime/std",
    "frame-support/std",
    "orml-traits/std",
    "orml-tokens/std",
    "pallet-balances/std",
    "hex-literal",
    "sp-io/std"
]

runtime-benchmarks = [
    "frame-benchmarking",
    "hex-literal",
    "sp-io",
]
try-runtime = [ "frame-support/try-runtime" ]
